<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ciphers.Caesar">


    <TextView
        android:id="@+id/caesar_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Caesar Cipher"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-80dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/encrypt_Caesar_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="enter text/cipher"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/caesarKey_size"
        app:layout_constraintEnd_toEndOf="@+id/caesar_title"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/caesar_title" />

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/textInputLayout_dec"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/caesar_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/caesar_title"
        app:layout_constraintVertical_bias="0.439">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/encrCaesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Encrypt Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_dec" />

    <Button
        android:id="@+id/decrCaesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Decrypt Cipher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrCaesar" />

    <Button
        android:id="@+id/copyCaesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Copy Result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decrCaesar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/caesarKey_size"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:hint="enter key"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/encrCaesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/caesar_title" />

    <TextView
        android:id="@+id/decr_msg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Encrypted/Decrypted message:"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyCaesar"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/caesar_msg_cntxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decr_msg_title"
        app:layout_constraintVertical_bias="0.145" />

</androidx.constraintlayout.widget.ConstraintLayout>