<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecryptText">


    <TextView
        android:id="@+id/decryptTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Decrypt Text"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-80dp" />


    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/textInputLayout_dec"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/decryptTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decryptTitle"
        app:layout_constraintVertical_bias="0.413">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/decrypt_editText"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:hint="enter hash to decrypt"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_dec"
        app:layout_constraintEnd_toEndOf="@+id/decryptTitle"
        app:layout_constraintStart_toStartOf="@+id/decryptTitle"
        app:layout_constraintTop_toBottomOf="@+id/decryptOption"
        app:layout_constraintVertical_bias="0.231" />

    <Button
        android:id="@+id/buttonDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Decrypt Hash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_dec" />

    <Button
        android:id="@+id/copydecr_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Copy Decrypted Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDecrypt" />

    <TextView
        android:id="@+id/decryptOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="Decrypt stored hash value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decryptTitle" />

    <TextView
        android:id="@+id/decr_msg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Decrypted message:"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copydecr_txt"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/decr_msg_cntxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decr_msg_title"
        app:layout_constraintVertical_bias="0.133" />

</androidx.constraintlayout.widget.ConstraintLayout>