<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncryptText">


    <TextView
        android:id="@+id/encryptTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Encrypt Text"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-80dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/encrpt_editText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="enter text to encrypt"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonEncrypt"
        app:layout_constraintEnd_toEndOf="@+id/encryptTitle"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/encryptTitle"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.446" />

    <TextView
        android:id="@+id/encr_msg_cntxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encr_msg_title"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/encr_msg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Encrypted message:"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_hash" />

    <Button
        android:id="@+id/store_hash"
        android:layout_width="131dp"
        android:layout_height="54dp"
        android:text="Store Hash Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyencr_txt" />

    <Button
        android:id="@+id/copyencr_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Copy Hash Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEncrypt" />

    <Button
        android:id="@+id/buttonEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Encrypt Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/textInputLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/encryptTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/encryptTitle"
        app:layout_constraintVertical_bias="0.424">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/share_hash"
        android:layout_width="112dp"
        android:layout_height="49dp"
        android:text="Share to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_hash" />

    <TextView
        android:id="@+id/encryptOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="Choose Encryption Type"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/encryptTitle"
        app:layout_constraintVertical_bias="0.866" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="182dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/encryptTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/compressionSwitch"
        android:layout_width="178dp"
        android:layout_height="35dp"
        android:text="Use Compression"
        app:layout_constraintBottom_toTopOf="@+id/encrpt_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>